Update source for wintere release

--- a/todo
+++ b/todo
@@ -1,7 +1,13 @@
 Notes for ArchBang iso image
  
-test autumn release install?
+start winter release
 
-check conky, i3 config and AB_Scripts folder.
+themes, conky, background
 
-test mog+g conky and isntaller keyboard layout!
+wallpaper and theme in logo folder.
+
+change conky to near black.
+
+vim added as I like it ;-)
+
+pv for copytoram not something I really want to ship with...
