--- a/todo
+++ b/todo
@@ -8,6 +8,10 @@ rofi
 conky
 gtk3 [done]
 
-test addition of zstd to mkinitcpio
+check for gitignore...
+
+
+added in extra workspaces
+reload and restart binds.... s+Shift+[s-r]
 
 
